@@ -1531,17 +1531,21 @@ static void usage(FILE *stream)
 "usage: %s {-v | --version}\n"
 "usage: %s --help\n",
 	 program_name, program_name, program_name);
-  fputs(
+  if (stdout == stream) {
+    fputs(
+"\n"
+"Prepare a troff(1) document for HTML formatting.\n"
 "\n"
 "This program is not intended to be executed standalone; it is\n"
-"normally part of a groff pipeline for producing HTML output.\n"
-"\n"
-"If your need to call it manually (e.g., for debugging purposes),\n"
-"give the 'groff' program the command-line option '-V' to inspect\n",
-	stream);
-  fprintf(stream, "the arguments with which '%s' is called.\n",
-      program_name);
-  fputs("\nSee grohtml(1).\n", stream);
+"normally part of a groff pipeline.  If your need to run it manually\n"
+"(e.g., for debugging purposes), give the 'groff' program the\n"
+"command-line option '-V' to inspect the arguments with which\n",
+	  stream);
+    fprintf(stream,
+"'%s' is called.  See the grohtml(1) manual page.\n",
+	  program_name);
+    exit(EXIT_SUCCESS);
+  }
 }
 
 /*
@@ -1659,7 +1663,6 @@ static int scanArguments(int argc, char **argv)
       break;
     case CHAR_MAX + 1: // --help
       usage(stdout);
-      exit(EXIT_SUCCESS);
       break;
     case '?':
       usage(stderr);
